--- a/client/src/components/Header/Header.module.css
+++ b/client/src/components/Header/Header.module.css
@@ -2,7 +2,8 @@
 
 .header {
   color: var(--text-primary);
-  margin-bottom: 15px;
+  margin: 0px auto 15px;
+  max-width: 1500px;
   padding: 10px 20px;
   background: var(--header-bg);
   border-radius: 12px;
@@ -34,7 +35,6 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  max-width: 1600px;
   margin: 0;
   flex-wrap: nowrap;
   gap: 15px;
