--- a/client/src/pages/TrackedAppsPage.module.css
+++ b/client/src/pages/TrackedAppsPage.module.css
@@ -366,7 +366,7 @@ body.dark-mode .stackCount {
 
 .grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
   gap: 15px;
   padding-bottom: 20px;
 }
@@ -378,7 +378,7 @@ body.dark-mode .stackCount {
 
 .gridWithUpdates {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
   gap: 15px;
   padding-bottom: 20px;
 }
@@ -390,7 +390,7 @@ body.dark-mode .stackCount {
 
 .gridWithoutUpdates {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
   gap: 15px;
   padding-bottom: 20px;
 }
